# avtomat_dos

./: .gitignore  Cargo.toml  README.md  build.macos.intel.sh  build.macos.sh  build.rs
assets/: AppIcon.icns  Info.plist
assets/howto/: MACOS.md  WINDOWS.md
src/: main.rs
src/crawler/: header_db.rs  mod.rs  target_picker.rs
src/targets/: mod.rs
src/ui/: mod.rs  style.rs
