[package]
name = "avtomat-dos"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ed25519-dalek = "1.0.1"
futures = "0.3.21"
iced = { version = "0.3.0", features = ["tokio"] }
rand = "0.8.5"
reqwest = { version = "0.11", features = ["cookies"] }
select = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.17.0", features = ["full"] }
url = "2.2.2"

[profile.release]
lto = true
panic = "abort"
strip = true

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"